wen, with github opacity problem

--- a/source/css/_schemes/Pisces/_menu.styl
+++ b/source/css/_schemes/Pisces/_menu.styl
@@ -25,6 +25,7 @@
     line-height: inherit;
     transition-property: background-color;
     the-transition();
+    font-size: 15px;
 
     &:hover {
       background: #f9f9f9;
