--- a/source/css/_variables/base.styl
+++ b/source/css/_variables/base.styl
@@ -17,7 +17,7 @@ $grey-dark    = #999
 $grey-dim     = #666
 $black-light  = #555
 $black-dim    = #333
-$black-deep   = #222
+$black-deep   = #0684bd
 $red          = #ff2a2a
 $blue-bright  = #87daff
 $blue         = #0684bd
@@ -91,7 +91,7 @@ $font-weight-bolder       = 700
 
 
 // Font size
-$font-size-base           = 14px
+$font-size-base           = 16px
 $font-size-small          = $font-size-base - 2px
 $font-size-smaller        = $font-size-base - 4px
 $font-size-large          = $font-size-base + 2px
@@ -107,7 +107,7 @@ $font-size-headings-large   = $font-size-headings-base + $font-size-headings-ste
 $font-size-headings-larger  = $font-size-headings-large + $font-size-headings-step
 
 // Global line height
-$line-height-base           = 2
+$line-height-base           = 1.6 
 $line-height-code-block     = 1.6  // Can't be less than 1.3
 
 
@@ -157,7 +157,7 @@ $btn-default-radius             = 0
 $btn-default-bg                 = $black-deep
 $btn-default-color              = white
 $btn-default-font-size          = 14px
-$btn-default-border-width       = 2px
+$btn-default-border-width       = 1px
 $btn-default-border-color       = $black-deep
 $btn-default-hover-bg           = white
 $btn-default-hover-color        = $black-deep
@@ -307,8 +307,8 @@ $b2t-bg-color                 = $black-deep
 
 //  .post-expand .post-eof
 //  In Muse scheme, margin above and below the post separator
-$post-eof-margin-top          = 80px  //  or 160px for more white space
-$post-eof-margin-bottom       = 60px  //  or 120px for less white space
+$post-eof-margin-top          = 65px  //  or 160px for more white space
+$post-eof-margin-bottom       = 55px  //  or 120px for less white space
 
 
 // Iconography
