not sure what i did

--- a/source/css/_common/scaffolding/base.styl
+++ b/source/css/_common/scaffolding/base.styl
@@ -69,8 +69,8 @@ img {
 
 
 hr {
-  margin: 40px 0;
-  height: 3px;
+  margin: -10px 0 10px;
+  height: 2px;
   border: none;
   background-color: $gray-lighter;
   background-image: repeating-linear-gradient(
