--- a/source/css/_schemes/Pisces/_layout.styl
+++ b/source/css/_schemes/Pisces/_layout.styl
@@ -1,7 +1,8 @@
 .header {
   position: relative;
   margin: 0 auto;
-  width: $main-desktop;
+  width: 90%;
+  max-width: $content-desktop-large+260px;
 
   +tablet() {
     width: auto;
@@ -47,7 +48,8 @@
 }
 
 .container .main-inner {
-  width: $main-desktop;
+  width: 90%;
+  max-width: $content-desktop-large+260px;
 
   +tablet() {
     width: auto;
@@ -61,7 +63,8 @@
   float: right;
   box-sizing: border-box;
   padding: $content-desktop-padding;
-  width: $content-desktop;
+  width: calc(100% - 260px);
+  max-width: $content-desktop-large;
   background: white;
   min-height: 700px;
   box-shadow: $box-shadow-inner;
